--- a/templates/default/common/header.html
+++ b/templates/default/common/header.html
@@ -32,7 +32,7 @@
 			<div class="nav-search">
 				<form action="/search.html" class="search-dh">
 					<div class="search-box">
-						<input autocomplete="off" class="search-input ac_wd txtKeywords" name="wd" placeholder="搜索电影、电视剧、综艺、动漫、演员" type="text">
+						<input class="search-input ac_wd txtKeywords" type="text" name="wd" autocomplete="off" placeholder="搜索电影、电视剧、综艺、动漫、演员">
 						<div class="search-drop">
 							<div class="drop-content-items ac_hot none">
 								<div class="list-item list-item-title"><strong>大家都在搜这些影片</strong></div>
@@ -53,16 +53,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="search-btn search-cupfox"
-						   href="/top.html"
-						   id="search-cupfox"
-						   title="电影先生排行榜"
-						>
-							<i class="icon-cupfox phb"></i><span>搜全网</span>
-						</a>
-						<button class="search-btn search-go" type="submit">
-							<i class="icon-search"></i>
-						</button>
+						<a href="/top.html" class="search-btn search-cupfox" id="search-cupfox" title="电影先生排行榜"><i class="icon-cupfox phb"></i><span>搜全网</span></a>						<button class="search-btn search-go" type="submit"><i class="icon-search"></i></button>
 						<button class="cancel-btn" type="button">取消</button>
 					</div>
 				</form>
@@ -71,30 +62,14 @@
 			
 			<div class="nav">
 				<ul class="nav-menu-items">
-					<li class="nav-menu-item {{if eq .page " index
-					"}}selected{{end}}"><a href="/" title="电影先生首页"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>首页</span>
-				</a></li>
-					<li class="nav-menu-item {{if eq .page " dianying
-					"}}selected{{end}}"><a href="/v/dianying.html" title="电影"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>电影</span>
-				</a></li>
-					<li class="nav-menu-item {{if eq .page " dianshiju
-					"}}selected{{end}}" ><a href="/v/dianshiju.html" title="电视剧"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>电视剧</span>
-				</a></li>
-					<li class="nav-menu-item {{if eq .page " dongman
-					"}}selected{{end}}"><a href="/v/dongman.html" title="动漫"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>动漫</span>
-				</a></li>
-					<li class="nav-menu-item {{if eq .page " zongyi
-					"}}selected{{end}}"><a href="/v/zongyi.html" title="综艺"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>综艺</span>
-				</a></li>
-					<li class="nav-menu-item {{if eq .page " zixun
-					"}}selected{{end}}"><a href="/arttype/zixun.html" title="资讯"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>资讯</span>
-				</a></li>
-					<li class="nav-menu-item domain plus {{if eq .page " web
-					"}}selected{{end}}"><a href="/web.html" title="电影先生最新域名"><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>网址</span>
-					<em>+</em></a></li>
-					<li app class="nav-menu-item {{if eq .page "
-					"}}selected{{end}}"><a href="/label/app.html" title="下载电影先生APP"><i class="icon-app pc"></i><span .page ne {{if "index"}}class="nav-menu-item-name"{{end}}>APP</span>
-				</a></li>
+					<li class="nav-menu-item {{if eq .page "index"}}selected{{end}}"><a href="/" title="电影先生首页"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>首页</span></a></li>
+					<li class="nav-menu-item {{if eq .page "dianying"}}selected{{end}}"><a href="/v/dianying.html" title="电影"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>电影</span></a></li>
+					<li class="nav-menu-item {{if eq .page "dianshiju"}}selected{{end}}" ><a href="/v/dianshiju.html" title="电视剧"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>电视剧</span></a></li>
+					<li class="nav-menu-item {{if eq .page "dongman"}}selected{{end}}"><a href="/v/dongman.html" title="动漫"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>动漫</span></a></li>
+					<li class="nav-menu-item {{if eq .page "zongyi"}}selected{{end}}"><a href="/v/zongyi.html" title="综艺"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>综艺</span></a></li>
+					<li class="nav-menu-item {{if eq .page "zixun"}}selected{{end}}"><a href="/arttype/zixun.html" title="资讯"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>资讯</span></a></li>
+					<li class="nav-menu-item domain plus {{if eq .page "web"}}selected{{end}}"><a href="/web.html" title="电影先生最新域名"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>网址</span><em>+</em></a></li>
+					<li class="nav-menu-item {{if eq .page "app"}}selected{{end}}"><a href="/label/app.html" title="下载电影先生APP"><i class="icon-app pc"></i><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>APP</span></a></li>
 				</ul>
 			</div>
 			
