--- a/templates/default/show.html
+++ b/templates/default/show.html
@@ -129,7 +129,7 @@
 						<span class="video-info-itemtitle">剧情：</span>
 						<div class="video-info-item video-info-content vod_content">
 							<span>
-								{{ .PageData.detail.VodContent }}
+								{{ raw .PageData.detail.VodContent }}
 							</span>
 							<a class="shrink" href="javaScript:">收起</a>
 						</div>
