修正电影描述中的html

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -52,7 +52,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">　　
-																		  {{ .VodContent }}
+																		  {{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
@@ -112,7 +112,7 @@
 										{{ end }}
 									</div>
 									<div class="module-item-style video-text">　　
-																			  {{ .VodContent }}
+																			  {{ raw .VodContent }}
 									</div>
 								</div>
 							</div>
@@ -193,7 +193,7 @@
 										{{ end }}
 									</div>
 									<div class="module-item-style video-text">　　
-																			  {{ .VodContent }}
+																			  {{ raw .VodContent }}
 									</div>
 								</div>
 							</div>
@@ -274,7 +274,7 @@
 										{{ end }}
 									</div>
 									<div class="module-item-style video-text">　　
-																			  {{ .VodContent }}
+																			  {{ raw .VodContent }}
 									</div>
 								</div>
 							</div>
@@ -353,7 +353,7 @@
 										{{ end }}
 									</div>
 									<div class="module-item-style video-text">　　
-																			  {{ .VodContent }}
+																			  {{ raw .VodContent }}
 									</div>
 								</div>
 							</div>
@@ -452,7 +452,7 @@
 											{{ end }}
 										</div>
 										<div class="module-item-style video-text">　　
-																				  {{ .VodContent }}
+																				  {{ raw .VodContent }}
 										</div>
 									</div>
 								</div>
@@ -503,7 +503,7 @@
 											{{ end }}
 										</div>
 										<div class="module-item-style video-text">　　
-																				  {{ .VodContent }}
+																				  {{ raw .VodContent }}
 										</div>
 									</div>
 								</div>
@@ -555,7 +555,7 @@
 											{{ end }}
 										</div>
 										<div class="module-item-style video-text">　　
-																				  {{ .VodContent }}
+																				  {{ raw .VodContent }}
 										</div>
 									</div>
 								</div>
@@ -606,7 +606,7 @@
 											{{ end }}
 										</div>
 										<div class="module-item-style video-text">　　
-																				  {{ .VodContent }}
+																				  {{ raw .VodContent }}
 										</div>
 									</div>
 								</div>
@@ -657,7 +657,7 @@
 											{{ end }}
 										</div>
 										<div class="module-item-style video-text">　　
-																				  {{ .VodContent }}
+																				  {{ raw .VodContent }}
 										</div>
 									</div>
 								</div>
