--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -280,7 +280,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">
-									{{ .VodContent }}
+									{{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
@@ -335,7 +335,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">　　
-																		  {{ .VodContent }}
+																		  {{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
