--- a/templates/default/show.html
+++ b/templates/default/show.html
@@ -307,7 +307,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">
-									{{ .VodContent }}
+									{{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
@@ -362,7 +362,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">　　
-																		  {{ .VodContent }}
+																		  {{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
