--- a/templates/default/v/dianying.html
+++ b/templates/default/v/dianying.html
@@ -66,7 +66,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">
-									{{ .VodContent }}
+									{{ raw .VodContent }}
 								</div>
 							</div>
 						</div>
@@ -123,7 +123,7 @@
 									{{ end }}
 								</div>
 								<div class="module-item-style video-text">
-									{{ $data.VodContent }}
+									{{ raw $data.VodContent }}
 								</div>
 							</div>
 						</div>
