--- a/templates/default/common/link.html
+++ b/templates/default/common/link.html
@@ -3,11 +3,8 @@
 <div id="friendlink" class="wrapper hidden-xs">
 	<div class="content">
 		<h2>友情链接：</h2>
-		<a href="https://i.xianshe.ng" target="_blank" title="先生网">先生网</a>
-		<a href="https://aiqi.ng" target="_blank" title="爱情先生">爱情先生</a>
-		<a href="https://kans.hu" target="_blank" title="看书先生">看书先生</a>
-		<a href="https://" target="_blank" title="乐音先生">乐音先生</a>
-		<a href=" https://youm.in" target="_blank" title="游民先生">游民先生</a>
+		<a href="http://www.wxhao.cn/" target="_blank">自动秒收录</a>
+		<a href="https://haogou.cc" target="_blank" title="haogou">haogou</a>
 	</div>
 </div>
 <!-- 友情链接 -->
