友情链接测试

--- a/templates/default/common/link.html
+++ b/templates/default/common/link.html
@@ -4,7 +4,7 @@
 	<div class="content">
 		<h2>友情链接：</h2>
 		<a href="http://www.wxhao.cn/" target="_blank">自动秒收录</a>
-		<a href="https://haogou.cc" target="_blank" title="haogou">haogou</a>
+		<a href="https://www.howgo.cc" target="_blank" title="好狗导航">好狗导航</a>
 	</div>
 </div>
 <!-- 友情链接 -->
