--- a/templates/default/common/link.html
+++ b/templates/default/common/link.html
@@ -3,8 +3,8 @@
 <div id="friendlink" class="wrapper hidden-xs">
 	<div class="content">
 		<h2>友情链接：</h2>
-		<a href="http://www.wxhao.cn/" target="_blank">自动秒收录</a>
-		<a href="https://www.howgo.cc" target="_blank" title="好狗导航">好狗导航</a>
+		<a href="https://www.badfl.com/" target="_blank" title="自动秒收录">自动秒收录</a>
+		<a href="https://www.howgo.cc/" target="_blank" title="好狗导航">好狗导航</a>
 	</div>
 </div>
 <!-- 友情链接 -->
