优化搜索分页，顶级栏目处理，子栏目处理

--- a/templates/default/common/header.html
+++ b/templates/default/common/header.html
@@ -63,7 +63,7 @@
 			<div class="nav">
 				<ul class="nav-menu-items">
 					<li class="nav-menu-item {{if eq .page "index"}}selected{{end}}"><a href="/" title="电影先生首页"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>首页</span></a></li>
-					<li class="nav-menu-item {{if eq .page "dianying"}}selected{{end}}"><a href="/v/dianying.html" title="电影"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>电影</span></a></li>
+					<li class="nav-menu-item {{if or (eq .page "dianying") (eq .page .macType.TypeEn)}}selected{{end}}"><a href="/v/dianying.html" title="电影"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>电影</span></a></li>
 					<li class="nav-menu-item {{if eq .page "dianshiju"}}selected{{end}}" ><a href="/v/dianshiju.html" title="电视剧"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>电视剧</span></a></li>
 					<li class="nav-menu-item {{if eq .page "dongman"}}selected{{end}}"><a href="/v/dongman.html" title="动漫"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>动漫</span></a></li>
 					<li class="nav-menu-item {{if eq .page "zongyi"}}selected{{end}}"><a href="/v/zongyi.html" title="综艺"><span {{if ne .page "index"}}class="nav-menu-item-name"{{end}}>综艺</span></a></li>
