--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -23,6 +23,9 @@
 	<link href="{.__STATIC__}}/cdn/expire-1-M/layer/3.1.1/theme/default/layer.css?v=3.1.1" id="layuicss-layer" rel="stylesheet">
 	{{end}}
 	
+	<!-- Clarity tracking code for https://maccms.vercel.app/ -->
+	<script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "lcrc0wf69z");</script>
+	
 	<script src="{{.__STATIC__}}/cdn/expire-1-M/jquery/1.9.1/jquery.min.js"></script>
 	<script src="{{.__JS__}}/jquery.lazyload.js" type="text/javascript"></script>
 	<script src="{{.__STATIC__}}/cdn/expire-10-y/jquery-autocomplete/1.0.7/jquery.auto-complete.js"></script>
