--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -24,7 +24,13 @@
 	{{end}}
 	
 	<!-- Clarity tracking code for https://maccms.vercel.app/ -->
-	<script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "lcrc0wf69z");</script>
+	<script>
+		(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "lcrc0wf69z");
+	</script>
 	
 	<script src="{{.__STATIC__}}/cdn/expire-1-M/jquery/1.9.1/jquery.min.js"></script>
 	<script src="{{.__JS__}}/jquery.lazyload.js" type="text/javascript"></script>
