--- a/templates/default/v/category.html
+++ b/templates/default/v/category.html
@@ -21,7 +21,7 @@
 					{{end}}
 					<div class="space-line-bold"></div>
 					<div class="block-box-item">
-						<a class="block-box-content" href="/pianku.html" title="查看全部影片"> <strong class="title">影片库</strong> </a>
+						<a class="block-box-content" href="/pianku-{{.macType.TypeEn}}.html" title="查看全部影片"> <strong class="title">影片库</strong> </a>
 						<div class="block-box-bg">
 							<i class="icon-cate-dy"></i>
 						</div>
@@ -34,7 +34,7 @@
 		{{ if eq .CategoryType "top" }}
 		<div class="module module-bg">
 			<div class="module-heading">
-				<h2 class="module-title">热播电影<span class="module-title-en">TRENDING</span></h2>
+				<h2 class="module-title">热播{{ .macType.TypeName }}<span class="module-title-en">TRENDING</span></h2>
 			</div>
 			<div class="module-list module-lines-list">
 				<div class="module-items">
