屏蔽影片评论

--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -350,20 +350,21 @@
 		</div>
 		<!-- 正在热播 -->
 
-        <div class="module">
-            <div class="module-heading">
-                <h2 class="module-title">影片评论<span class="module-title-en">REVIEW</span></h2>
-            </div>
-            <div class="mxone-pannel mxone-pannel-bg clearfix">
-                <div class="mxone-pannel-box clearfix">
-                    <div class="mxone-pannel_bd clearfix">
-                        <div class="mxone-pannel_bd">
-                            <div class="mac_comment" data-id="433129" data-mid="1"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+		<!-- 评论 -->
+<!--        <div class="module">-->
+<!--            <div class="module-heading">-->
+<!--                <h2 class="module-title">影片评论<span class="module-title-en">REVIEW</span></h2>-->
+<!--            </div>-->
+<!--            <div class="mxone-pannel mxone-pannel-bg clearfix">-->
+<!--                <div class="mxone-pannel-box clearfix">-->
+<!--                    <div class="mxone-pannel_bd clearfix">-->
+<!--                        <div class="mxone-pannel_bd">-->
+<!--                            <div class="mac_comment" data-id="433129" data-mid="1"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <!-- 评论 -->
 
     </div>
