--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -97,7 +97,8 @@
                             </div>
                         </div>
                         <div class="video-info-main">
-                            <div class="video-info-items"><span class="video-info-itemtitle">剧情：</span>
+                            <div class="video-info-items">
+								<span class="video-info-itemtitle">剧情：</span>
                                 <div class="video-info-item video-info-content">
                                     <p class="zkjj_a">{{ raw .PageData.detail.VodContent }}
 										<span class="zk_jj red">[展开全部]</span>
