头部添加搜狗验证文件

--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<title>ç”µå½±å…ˆç”Ÿ</title>
-	<meta content="ç”µå½±å…ˆç”Ÿ,dianyi.ng,æœ€æ–°ç”µå½±,ç”µå½±å¤§å…¨,å½±è§†å¤§å…¨,åœ¨çº¿ç”µå½±,å…è´¹ç”µå½±,ç”µå½±åœ¨çº¿è§‚çœ‹,æœ€æ–°ç”µè§†å‰§" name="keywords">
-	<meta content="èšåˆå…¨ç½‘å½±ç‰‡ï¼Œä½ æƒ³çœ‹çš„å…¨éƒ½æœ‰ï¼æ¯å¤©æœé›†äº’è”ç½‘æœ€æ–°ç”µå½±å’Œç”µè§†å‰§ï¼Œä¸ºå¹¿å¤§ç”¨æˆ·å…è´¹æä¾›æ— å¹¿å‘Šåœ¨çº¿è§‚çœ‹ç”µå½±å’Œç”µè§†å‰§æœåŠ¡ï¼ŒåŠæ—¶æ”¶å½•æœ€æ–°ã€æœ€çƒ­ã€æœ€å…¨çš„ç”µå½±å¤§ç‰‡,é«˜æ¸…æ­£ç‰ˆå…è´¹çœ‹ã€‚" name="description">
+	<title>µçÓ°ÏÈÉú</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=gb2312" />
+	<meta name="sogou_site_verification" content="q2G2cS2s5R" />
+	<meta content="µçÓ°ÏÈÉú,dianyi.ng,×îÐÂµçÓ°,µçÓ°´óÈ«,Ó°ÊÓ´óÈ«,ÔÚÏßµçÓ°,Ãâ·ÑµçÓ°,µçÓ°ÔÚÏß¹Û¿´,×îÐÂµçÊÓ¾ç" name="keywords">
+	<meta content="¾ÛºÏÈ«ÍøÓ°Æ¬£¬ÄãÏë¿´µÄÈ«¶¼ÓÐ£¡Ã¿ÌìËÑ¼¯»¥ÁªÍø×îÐÂµçÓ°ºÍµçÊÓ¾ç£¬Îª¹ã´óÓÃ»§Ãâ·ÑÌá¹©ÎÞ¹ã¸æÔÚÏß¹Û¿´µçÓ°ºÍµçÊÓ¾ç·þÎñ£¬¼°Ê±ÊÕÂ¼×îÐÂ¡¢×îÈÈ¡¢×îÈ«µÄµçÓ°´óÆ¬,¸ßÇåÕý°æÃâ·Ñ¿´¡£" name="description">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 	<meta content="always" name="referrer">
@@ -40,10 +42,10 @@
 	<script src="{{.__STATIC__}}/cdn/expire-1-M/clipboard.js/2.0.0/clipboard.min.js" type="text/javascript"></script>
 	<script src="{{.__STATIC__}}/cdn/expire-1-M/layer/3.1.1/layer.js"></script>
 	<script src="{{.__JS__}}/script.js"></script>
-	<!-- å…¨å±€å¹¿å‘Šä½ -->
+	<!-- È«¾Ö¹ã¸æÎ» -->
 	
 	{{if eq .page "play"}}
-	<!--æ–°çš„-->
+	<!--ÐÂµÄ-->
 	<style>
 		@media (min-width: 899px) {
 			.player-info .page-title a::after {
@@ -73,7 +75,7 @@
 			color: #fff;
 		}
 		
-		/*æ–°å’ŒVIPå›¾æ ‡css*/
+		/*ÐÂºÍVIPÍ¼±êcss*/
 		.module-blocklist a em {
 			color: rgb(0 0 0 / 92%);
 			position: absolute;
@@ -113,9 +115,9 @@
 			}
 		}
 		
-		/*æ–°å’ŒVIPå›¾æ ‡css*/
+		/*ÐÂºÍVIPÍ¼±êcss*/
 	</style>
-	<!--æ–°çš„-->
+	<!--ÐÂµÄ-->
 	{{end}}
 
 </head>
