处理片库内容，以及片库路由

--- a/templates/default/common/header.html
+++ b/templates/default/common/header.html
@@ -124,12 +124,12 @@
 										</a>
 									</li>
 									<li class="grid-item grid-more">
-										<a class="grid-more-link" href="pianku.html" title="查看全部影片">
+										<a class="grid-more-link" href="/pianku/index.html" title="查看全部影片">
 											<div class="grid-item-name">全部影片</div>
 										</a>
 									</li>
 									<li class="grid-item grid-more android">
-										<a class="grid-more-link" href="label/app.html" title="下载电影先生APP">
+										<a class="grid-more-link" href="/label/app.html" title="下载电影先生APP">
 											<div class="grid-item-name">下载客户端</div>
 										</a>
 									</li>
