--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -465,8 +465,7 @@
 						</div>
 					</div>
 					<div class="module-footer">
-						<a class="load-all" href="pianku.html" title="更多">查看更多<i
-								class="icon-arrow-right-o"></i></a>
+						<a class="load-all" href="/pianku/index.html" title="更多">查看更多<i class="icon-arrow-right-o"></i></a>
 					</div>
 				</div>
 				
