--- a/templates/default/v/category.html
+++ b/templates/default/v/category.html
@@ -21,7 +21,7 @@
 					{{end}}
 					<div class="space-line-bold"></div>
 					<div class="block-box-item">
-						<a class="block-box-content" href="/pianku-{{.macType.TypeEn}}.html" title="查看全部影片"> <strong class="title">影片库</strong> </a>
+						<a class="block-box-content" href="/pianku/{{.macType.TypeEn}}.html" title="查看全部影片"> <strong class="title">影片库</strong> </a>
 						<div class="block-box-bg">
 							<i class="icon-cate-dy"></i>
 						</div>
@@ -202,7 +202,7 @@
 	</div>
 
 	<div class="module-footer module-type">
-		<a class="load-all" href="/pianku-{{ .macType.TypeEn }}.html" title="全部{{ .macType.TypeName }}">全部{{ .macType.TypeName }}<i class="icon-arrow-right-o"></i></a>
+		<a class="load-all" href="/pianku/{{ .macType.TypeEn }}.html" title="全部{{ .macType.TypeName }}">全部{{ .macType.TypeName }}<i class="icon-arrow-right-o"></i></a>
 	</div>
 
 </main>
